<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reviewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingTop="4dp"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/reviewRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp" />

        <ImageView
            android:id="@+id/reviewImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/review_image"
            android:scaleType="centerCrop" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

        <!-- Review Title -->
        <TextView
            android:id="@+id/reviewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textStyle="bold" />

        <!-- Review Content -->
        <TextView
            android:id="@+id/reviewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingTop="4dp" />

        <!-- Edit & Delete Icons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageButton
                android:id="@+id/editReviewButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit_review"
                app:srcCompat="@drawable/edit_icon"/>

            <ImageButton
                android:id="@+id/deleteReviewButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/delete_review"
                app:srcCompat="@drawable/delete_icon"/>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
